--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,5 @@
 run:
   timeout: 5m
-  skip-files: [ 'client_secret_test.go' ]
-  skip-dirs: [ ]
 
 linters-settings:
   govet:
@@ -10,8 +8,6 @@ linters-settings:
       - fieldalignment
   gocyclo:
     min-complexity: 15
-  maligned:
-    suggest-new: true
   goconst:
     min-len: 5
     min-occurrences: 3
@@ -93,8 +89,10 @@ issues:
   exclude:
     - 'ST1000: at least one file in a package should have a package comment'
     - 'package-comments: should have a package comment'
-    - 'fmt.Sprintf can be replaced with string addition'
+    - 'fmt.Sprintf can be replaced with string'
   exclude-rules:
     - path: .*_test.go
       linters:
         - funlen
+  exclude-files:
+    - 'client_secret_test.go'
